feat: implement inpainting
